[package]
name = "rustsym"
version = "0.3.2"
description = "Tool to query symbols from rust code for use in IDEs"
authors = ["Trixnz"]
repository = "https://github.com/trixnz/rustsym"
readme = "README.md"
license = "MIT"

[dependencies]
syntex_syntax = "0.59.1"
rustc-serialize = "0.3"
clap = "2"
walkdir = "0.1.5"
syncbox = "0.2.4"
num_cpus = "0.2.13"

[dev-dependencies]
tempfile = "2.1.4"